assignment1/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from e:\PPL\assignment1\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'break'", "'do'", "'else'", 
                     "'false'", "'for'", "'function'", "'if'", "'return'", 
                     "'true'", "'while'", "'void'", "'out'", "'continue'", 
                     "'of'", "'inherit'", "'array'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'='", "'<'", "'<='", "'>'", "'>='", "'::'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "':'", "','", 
                     "'.'", "'boolean'", "'float'", "'integer'", "'string'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOLIT", "STRLIT", 
                      "Auto", "Break", "Do", "Else", "FALSE", "For", "Function", 
                      "If", "Return", "TRUE", "While", "Void", "Out", "Continue", 
                      "Of", "Inherit", "Array", "ADDOP", "SUBSTROP", "MULOP", 
                      "DIVOP", "MODOP", "LOGICALNOT", "LOGICALAND", "LOGICALOR", 
                      "EQUAL", "NOTEQUAL", "ASSIGN", "SMALLER", "SMALLEREQUAL", 
                      "GREATER", "GREATEREQUAL", "STRCONCAT", "LB", "RB", 
                      "LS", "RS", "LP", "RP", "SEMI", "COLON", "COMMA", 
                      "DOT", "BOOLEAN", "FLOAT", "INTEGER", "STRING", "ID", 
                      "WS", "Line_cmt", "Block_cmt", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_vardecl_ = 3
    RULE_vardeclass = 4
    RULE_varlist = 5
    RULE_automic = 6
    RULE_typ = 7
    RULE_idlist = 8
    RULE_arrtype = 9
    RULE_funcdecl = 10
    RULE_paramlist = 11
    RULE_paramdecl = 12
    RULE_blockstate = 13
    RULE_stmt = 14
    RULE_assignstmt = 15
    RULE_assign_cont = 16
    RULE_assign_lhs = 17
    RULE_scalar_var = 18
    RULE_ifstmt = 19
    RULE_forstmt = 20
    RULE_whiledostmt = 21
    RULE_dowhilestmt = 22
    RULE_breakstmt = 23
    RULE_continuestmt = 24
    RULE_returnstmt = 25
    RULE_callstmt = 26
    RULE_statement = 27
    RULE_blockstmt = 28
    RULE_literal = 29
    RULE_arraylit = 30
    RULE_func_call = 31
    RULE_explist = 32
    RULE_exp = 33
    RULE_exp1 = 34
    RULE_exp2 = 35
    RULE_exp3 = 36
    RULE_exp4 = 37
    RULE_exp5 = 38
    RULE_exp6 = 39
    RULE_exp7 = 40
    RULE_operands = 41
    RULE_elem_exp = 42

    ruleNames =  [ "program", "decl", "vardecl", "vardecl_", "vardeclass", 
                   "varlist", "automic", "typ", "idlist", "arrtype", "funcdecl", 
                   "paramlist", "paramdecl", "blockstate", "stmt", "assignstmt", 
                   "assign_cont", "assign_lhs", "scalar_var", "ifstmt", 
                   "forstmt", "whiledostmt", "dowhilestmt", "breakstmt", 
                   "continuestmt", "returnstmt", "callstmt", "statement", 
                   "blockstmt", "literal", "arraylit", "func_call", "explist", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "operands", "elem_exp" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOLIT=3
    STRLIT=4
    Auto=5
    Break=6
    Do=7
    Else=8
    FALSE=9
    For=10
    Function=11
    If=12
    Return=13
    TRUE=14
    While=15
    Void=16
    Out=17
    Continue=18
    Of=19
    Inherit=20
    Array=21
    ADDOP=22
    SUBSTROP=23
    MULOP=24
    DIVOP=25
    MODOP=26
    LOGICALNOT=27
    LOGICALAND=28
    LOGICALOR=29
    EQUAL=30
    NOTEQUAL=31
    ASSIGN=32
    SMALLER=33
    SMALLEREQUAL=34
    GREATER=35
    GREATEREQUAL=36
    STRCONCAT=37
    LB=38
    RB=39
    LS=40
    RS=41
    LP=42
    RP=43
    SEMI=44
    COLON=45
    COMMA=46
    DOT=47
    BOOLEAN=48
    FLOAT=49
    INTEGER=50
    STRING=51
    ID=52
    WS=53
    Line_cmt=54
    Block_cmt=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 86
                self.decl()
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ID):
                    break

            self.state = 91
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl_(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_Context,0)


        def vardeclass(self):
            return self.getTypedRuleContext(MT22Parser.VardeclassContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.vardecl_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.vardeclass()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def idlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.IdlistContext)
            else:
                return self.getTypedRuleContext(MT22Parser.IdlistContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_




    def vardecl_(self):

        localctx = MT22Parser.Vardecl_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MT22Parser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.COMMA:
                self.state = 102
                self.idlist()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(MT22Parser.COLON)
            self.state = 109
            self.typ()
            self.state = 110
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardeclass




    def vardeclass(self):

        localctx = MT22Parser.VardeclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardeclass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(MT22Parser.ID)
            self.state = 113
            self.varlist()
            self.state = 114
            self.exp()
            self.state = 115
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varlist




    def varlist(self):

        localctx = MT22Parser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varlist)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(MT22Parser.COMMA)
                self.state = 118
                self.match(MT22Parser.ID)
                self.state = 119
                self.varlist()
                self.state = 120
                self.exp()
                self.state = 121
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(MT22Parser.COLON)
                self.state = 124
                self.typ()
                self.state = 125
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutomicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_automic




    def automic(self):

        localctx = MT22Parser.AutomicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_automic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def automic(self):
            return self.getTypedRuleContext(MT22Parser.AutomicContext,0)


        def arrtype(self):
            return self.getTypedRuleContext(MT22Parser.ArrtypeContext,0)


        def Auto(self):
            return self.getToken(MT22Parser.Auto, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typ




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typ)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.automic()
                pass
            elif token in [MT22Parser.Array]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.arrtype()
                pass
            elif token in [MT22Parser.Auto]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(MT22Parser.Auto)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_idlist




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MT22Parser.COMMA)
            self.state = 137
            self.match(MT22Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrtypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Array(self):
            return self.getToken(MT22Parser.Array, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def INTLIT(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INTLIT)
            else:
                return self.getToken(MT22Parser.INTLIT, i)

        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def Of(self):
            return self.getToken(MT22Parser.Of, 0)

        def automic(self):
            return self.getTypedRuleContext(MT22Parser.AutomicContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_arrtype




    def arrtype(self):

        localctx = MT22Parser.ArrtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arrtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MT22Parser.Array)
            self.state = 140
            self.match(MT22Parser.LS)
            self.state = 141
            self.match(MT22Parser.INTLIT)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.COMMA:
                self.state = 142
                self.match(MT22Parser.COMMA)
                self.state = 143
                self.match(MT22Parser.INTLIT)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 149
            self.match(MT22Parser.RS)
            self.state = 150
            self.match(MT22Parser.Of)
            self.state = 151
            self.automic()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def Function(self):
            return self.getToken(MT22Parser.Function, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def blockstate(self):
            return self.getTypedRuleContext(MT22Parser.BlockstateContext,0)


        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def Void(self):
            return self.getToken(MT22Parser.Void, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def Inherit(self):
            return self.getToken(MT22Parser.Inherit, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MT22Parser.ID)
            self.state = 154
            self.match(MT22Parser.COLON)
            self.state = 155
            self.match(MT22Parser.Function)
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.Auto, MT22Parser.Array, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.state = 156
                self.typ()
                pass
            elif token in [MT22Parser.Void]:
                self.state = 157
                self.match(MT22Parser.Void)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 160
            self.match(MT22Parser.LB)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.Out) | (1 << MT22Parser.Inherit) | (1 << MT22Parser.ID))) != 0):
                self.state = 161
                self.paramlist()


            self.state = 164
            self.match(MT22Parser.RB)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.Inherit:
                self.state = 165
                self.match(MT22Parser.Inherit)
                self.state = 166
                self.match(MT22Parser.ID)


            self.state = 169
            self.blockstate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ParamdeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ParamdeclContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.paramdecl()
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.COMMA:
                self.state = 172
                self.match(MT22Parser.COMMA)
                self.state = 173
                self.paramdecl()
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def Inherit(self):
            return self.getToken(MT22Parser.Inherit, 0)

        def Out(self):
            return self.getToken(MT22Parser.Out, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramdecl




    def paramdecl(self):

        localctx = MT22Parser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paramdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.Inherit:
                self.state = 179
                self.match(MT22Parser.Inherit)


            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.Out:
                self.state = 182
                self.match(MT22Parser.Out)


            self.state = 185
            self.match(MT22Parser.ID)
            self.state = 186
            self.match(MT22Parser.COLON)
            self.state = 187
            self.typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_blockstate




    def blockstate(self):

        localctx = MT22Parser.BlockstateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_blockstate)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(MT22Parser.LP)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.Break) | (1 << MT22Parser.Do) | (1 << MT22Parser.For) | (1 << MT22Parser.If) | (1 << MT22Parser.Return) | (1 << MT22Parser.While) | (1 << MT22Parser.Continue) | (1 << MT22Parser.LB) | (1 << MT22Parser.LP) | (1 << MT22Parser.ID))) != 0):
                self.state = 190
                self.blockstmt()


            self.state = 193
            self.match(MT22Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'
